--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT=3000
 
 MONGODB_CNN=mongodb+srv://user_node_cafe:uStuKZJ6JpsoHalm@mycluster.ytqya.mongodb.net/cafeDB
 
+SECRETORPRIVATEKEY=Est03sMyPublicK3y
+
