Google Signin get token

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ MONGODB_CNN=mongodb+srv://user_node_cafe:uStuKZJ6JpsoHalm@mycluster.ytqya.mongod
 
 SECRETORPRIVATEKEY=Est03sMyPublicK3y
 
+GOOGLE_CLINET=ID=286098751358-hl0u87c5vc7jbom294oroc0bvubk0ub7.apps.googleusercontent.com
+
+
+GOOGLE_SECRET_ID=UTnEWu3PhkBxW-TCXUbesikc
